--- a/frontend/src/globals.css
+++ b/frontend/src/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;500;600;700;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;500;600;700;800&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -66,7 +66,7 @@
     --destructive: 0 62.8% 50%;
     --destructive-foreground: 210 20% 98%;
     --border: 240 12% 26%;
-    --input:220 8% 47%;
+    --input: 220 8% 47%;
     --ring: 192 100% 20%;
 
     --brand-primary: 212 100% 17%;
@@ -83,7 +83,7 @@
     --danger: 0 100% 50%;
 
     --scroll-thumb: 220 9% 50%;
-    --scroll-track:  0 0% 0%;
+    --scroll-track: 0 0% 0%;
   }
 }
 
@@ -98,6 +98,14 @@
   body {
     @apply bg-background text-foreground;
     overflow: hidden;
+  }
+}
+
+@layer base {
+  @font-face {
+    font-family: Playlist Script;
+    font-weight: 400;
+    src: url(/assets/fonts/FS_PLAYLIST_SCRIPT.ttf) format("ttf");
   }
 }
 
