happy_run: update email template

--- a/ws_event_page/templates/emails/hr_order_cancellation.html
+++ b/ws_event_page/templates/emails/hr_order_cancellation.html
@@ -27,16 +27,9 @@
           <th
             scope="col"
             style="border-color: #3b6dae; color: #172a52"
-            width="100"
+            width="120"
           >
             Hạng vé
-          </th>
-          <th
-            scope="col"
-            style="border-color: #3b6dae; color: #172a52"
-            width="80"
-          >
-            Cự ly
           </th>
           <th
             scope="col"
@@ -59,8 +52,9 @@
         <tr>
           <th style="border-color: #3b6dae" scope="row">{{loop.index}}</th>
           <td style="border-color: #3b6dae">{{ticket.full_name}}</td>
-          <td style="border-color: #3b6dae">{{ticket.ticket_type}}</td>
-          <td style="border-color: #3b6dae">{{ticket.distance}}</td>
+          <td style="border-color: #3b6dae">
+            {{ticket.ticket_type}} - {{ticket.distance}}
+          </td>
           <td style="border-color: #3b6dae">{{ticket.shirt_size}}</td>
           <td style="border-color: #3b6dae">{{ticket.ticket_price}}</td>
         </tr>
