Update translate Eng

--- a/frontend/src/globals.css
+++ b/frontend/src/globals.css
@@ -120,7 +120,7 @@
   body {
     @apply text-happy_box-foreground;
     @apply font-tropen;
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
     @apply !min-w-[100vw];
   }
 }
@@ -137,6 +137,10 @@
     descent-override: 20%; /* Điều chỉnh chiều cao phần dưới */
     line-gap-override: 0%; /* Bỏ khoảng cách dòng */
     src: url(/happy-box/fonts/tropen.otf);
+  }
+  @font-face {
+    font-family: "Race Champion";
+    src: url(/happy-run/fonts/race_champion.ttf);
   }
 }
 
