nutrition-journey: add admin role

--- a/ws_event_page/templates/emails/hr_order_cancellation.html
+++ b/ws_event_page/templates/emails/hr_order_cancellation.html
@@ -67,6 +67,11 @@
       <p style="color: #172a52"><strong>Tổng tiền:</strong> {{total_price}}</p>
     </div>
 
+    <div class="text-center" style="margin-top: 20px">
+      <em>Bạn có thể theo dõi trạng thái đơn bằng đường link sau:</em>
+      <a href="{{order_detail_link}}" target="_blank">Chi tiết đơn hàng</a>
+    </div>
+
     <p class="text-center" style="margin-top: 20px; color: #172a52">
       Xin chân thành cảm ơn và hẹn gặp lại bạn ở các sự kiện tiếp theo!
     </p>
