--- a/ws_event_page/templates/emails/hr_payment_confirmation.html
+++ b/ws_event_page/templates/emails/hr_payment_confirmation.html
@@ -74,6 +74,12 @@
     <div class="text-right" style="margin-top: 20px">
       <p style="color: #172a52"><strong>Tổng tiền:</strong> {{total_paid}}</p>
     </div>
+
+    <div class="text-center" style="margin-top: 20px">
+      <em>Bạn có thể theo dõi trạng thái đơn bằng đường link sau:</em>
+      <a href="{{order_detail_link}}" target="_blank">Chi tiết đơn hàng</a>
+    </div>
+
     <p class="text-center" style="margin-top: 20px">
       Xin chân thành cảm ơn và hẹn gặp lại các bạn tại sự kiện Happy Run 2025!
     </p>
