happy-run: update reports

--- a/ws_event_page/templates/emails/hr_order_cancellation.html
+++ b/ws_event_page/templates/emails/hr_order_cancellation.html
@@ -1,7 +1,4 @@
-<div
-  class="gray-container text-center"
-  style="text-align: center; color: #172a52"
->
+<div class="container text-center" style="text-align: center; color: #172a52">
   <div>
     <h1 style="text-align: center">
       <span style="color: #f05023">ĐƠN ĐĂNG KÝ CỦA BẠN ĐÃ ĐƯỢC HUỶ</span>
@@ -9,6 +6,9 @@
       <span style="color: #172a52">SỰ KIỆN</span
       ><span style="color: #f5aa1e"> HAPPY RUN 2025</span>
     </h1>
+    <h3 style="text-align: center; color: #3b6dae">
+      YOUR REGISTRATION HAS BEEN CANCELLED FOR HAPPY RUN 2025 EVENT
+    </h3>
     <!-- Order detail -->
     <table
       class="table"
@@ -16,18 +16,20 @@
     >
       <thead style="background: #3b6dae45">
         <tr>
-          <th scope="col" style="border-color: #3b6dae; color: #172a52">#</th>
           <th
             scope="col"
             style="border-color: #3b6dae; color: #172a52"
-            width="180"
+            width="20"
           >
+            #
+          </th>
+          <th scope="col" style="border-color: #3b6dae; color: #172a52">
             Họ tên
           </th>
           <th
             scope="col"
             style="border-color: #3b6dae; color: #172a52"
-            width="120"
+            width="140"
           >
             Hạng vé
           </th>
@@ -64,16 +66,33 @@
 
     <!-- Payment details -->
     <div class="text-right" style="margin-top: 20px">
-      <p style="color: #172a52"><strong>Tổng tiền:</strong> {{total_price}}</p>
-    </div>
-
-    <div class="text-center" style="margin-top: 20px">
-      <em>Bạn có thể theo dõi trạng thái đơn bằng đường link sau:</em>
-      <a href="{{order_detail_link}}" target="_blank">Chi tiết đơn hàng</a>
+      <p style="color: #172a52">
+        <strong>Tổng tiền | <em>Total price</em>:</strong> {{total_price}}
+      </p>
     </div>
 
     <p class="text-center" style="margin-top: 20px; color: #172a52">
-      Xin chân thành cảm ơn và hẹn gặp lại bạn ở các sự kiện tiếp theo!
+      <em>Bạn có thể theo dõi trạng thái đơn bằng đường link sau:</em>
+
+      <br />
+      <span style="color: #3b6dae"
+        ><em>You can track your order status by the following link:</em></span
+      >
+      <br />
+      <a href="{{order_detail_link}}" target="_blank"
+        >Chi tiết đơn hàng | Order Detail</a
+      >
+    </p>
+
+    <p class="text-center" style="margin-top: 20px; color: #172a52">
+      Xin chân thành cảm ơn và hẹn gặp lại các bạn ở các sự kiện lần sau tại
+      Wellspring!
+      <br />
+      <span style="color: #3b6dae"
+        ><em
+          >Thank you very much and see you at the next events at Wellspring!</em
+        ></span
+      >
     </p>
   </div>
 </div>
