--- a/ws_event_page/templates/emails/ac_confirmation_email.html
+++ b/ws_event_page/templates/emails/ac_confirmation_email.html
@@ -1,7 +1,7 @@
 <style>
   .container {
     width: 100%;
-    max-width: 600px;
+    max-width: max-content;
     margin: auto;
     padding: 10px 0px;
     text-align: justify;
